# TaskTrack

./: .gitignore  Makefile  README.md
backend/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: dependencies.py  router.py  websocket.py
backend/app/cache/: README.md  redis_client.py  task_list.py
backend/app/core/: config.py  datetime_utils.py  exceptions.py  security.py
backend/app/core/idempotency/: __init__.py  dependencies.py  model.py  repository.py  service.py
backend/app/db/: indexes.py  session.py
backend/app/domains/auth/: README.MD  dependencies.py  ports.py  router.py  schemas.py  service.py
backend/app/grpc/: README.md  __init__.py  auth.py  mappers.py  server.py  services.py
backend/app/jobs/: lifespan.py  purge_soft_deleted.py
backend/app/logs/: README.md  __init__.py  handlers.py  middleware.py  setup.py
backend/app/realtime/: README.md  __init__.py  contracts.py  manager.py
backend/proto/: README.md  task_service.proto
backend/scripts/: generate_grpc_stubs.py
backend/tests/: conftest.py  test_auth.py  test_grpc.py  test_health.py  test_logging.py  test_password_reset.py  test_projects.py  test_schemas.py  test_slugify.py  test_soft_delete_retention.py  test_status_fsm.py  test_subtasks_and_history.py  test_tags.py  test_task_features.py  test_task_list.py  test_task_list_cache.py  test_task_refs.py  test_tasks.py  test_tasks_cache.py  test_users_admin.py  test_websocket.py  users.py
(+87 files in other folders)
