[project]
name = "task-service"
version = "0.1.0"
description = "Test task"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "pydantic-settings==2.14.1",
    "sqlalchemy[asyncio]==2.0.48",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "bcrypt==5.0.0",
    "pyjwt==2.12.1",
    "redis==7.3.0",
    "loguru==0.7.3",
    "email-validator>=2.2.0",
    "grpcio>=1.76.0",
    "protobuf>=6.33.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "aiosqlite>=0.21.0",
    "fakeredis>=2.34.0",
    "grpcio-tools>=1.76.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["app/grpc/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
